bad/2020-07-06/15-01/167.0/build.err
run.c: In function ‘cider’:
run.c:15:41: error: expected statement before ‘)’ token
     if((scald[i]>='A') && scald[i]<='Z'))
                                         ^
run.c:17:5: error: ‘else’ without a previous ‘if’
     else if ((scald[i]>='e') && scald[i]<='z'))
     ^~~~
run.c:17:47: error: expected statement before ‘)’ token
     else if ((scald[i]>='e') && scald[i]<='z'))
                                               ^
run.c:24:5: error: ‘else’ without a previous ‘if’
     else scald[i]=scald[i]
     ^~~~
run.c:25:1: error: expected ‘;’ before ‘}’ token
 }
 ^
run.c:26:8: warning: ‘return’ with a value, in function returning void
 return 0;
        ^
run.c:10:7: note: declared here
  void cider (char* scald) {
       ^~~~~